TMDM-14831 [DEV] Update SortType API on fulltext search